<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.cmich.locationnotes_reminders.notes.activities.NoteActivity"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/note_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/header_text" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/noteTitle"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_noteTitle"
                    android:inputType="text"
                    android:maxLength="35"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/main_text"
                    android:textColorHint="@color/hint_text"
                    android:textColorLink="@color/main_text"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/noteText"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_margin="8dp"
                    android:gravity="start|top"
                    android:hint="@string/hint_noteText"
                    android:inputType="textMultiLine"


                    android:padding="8dp"
                    android:textColor="@color/main_text"
                    android:textColorHint="@color/hint_text"
                    android:textColorLink="@color/main_text"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/noteLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:maxLength="50"
                    android:padding="8dp"
                    android:text="@string/hint_location"
                    android:textColor="@color/main_text"
                    android:textColorLink="@color/main_text"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/btn_add_note_location"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:alpha="50"
                        android:background="@drawable/outlined_button"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:stateListAnimator="@null"
                        android:text="@string/button_addLocation"
                        android:textColor="@color/buttons"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toStartOf="@+id/btn_add_modify_note"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btn_add_modify_note"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/filled_button"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:stateListAnimator="@null"
                        android:text="@string/button_addNote"
                        android:textColor="@color/text"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/btn_add_note_location"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>